# desloppify

./: .gitignore  .importlinter  ADDING_NEW_LANGUAGE.md  LICENSE  README.md  SKILL.md  pyproject.toml
desloppify/: README.md  STRUCTURE.md  _scorecard_draw.py  badge.py  cli.py  config.py  enums.py  issues.py  narrative.py  plan.py  registry.py  review.py  scorecard.py  scoring.py  state.py  utils.py  visualize.py  zones.py
desloppify/app/cli_support/: parser.py  parser_groups.py  parser_groups_admin.py
desloppify/app/commands/: config_cmd.py  detect.py  dev_cmd.py  dev_scaffold_templates.py  issues_cmd.py  langs.py  next.py  next_render.py  plan_cmd.py  registry.py  status.py  status_cmd.py  viz_cmd.py  zone_cmd.py
desloppify/app/output/: scorecard.py  visualize.py
desloppify/commands/: _helpers.py  config_cmd.py  detect.py  dev_cmd.py  fix_cmd.py  issues_cmd.py  move.py  next.py  plan_cmd.py  resolve.py  review_cmd.py  scan.py  show.py  status.py  zone_cmd.py
desloppify/core/: config.py  fallbacks.py  registry.py
desloppify/core/_internal/: __init__.py  text_utils.py
desloppify/detectors/: base.py  facade.py  graph.py  lang_hooks.py  layer_violation.py  passthrough.py  private_imports.py  review_coverage.py  security.py  signature.py  test_coverage.py  test_coverage_mapping.py
desloppify/engine/: concerns.py
desloppify/engine/_scoring/: __init__.py  detection.py
desloppify/engine/_state/: __init__.py  filtering.py  merge.py  merge_findings.py  merge_history.py  noise.py  persistence.py  resolution.py  schema.py  scoring.py
desloppify/engine/_work_queue/: __init__.py  core.py  helpers.py  issues.py  ranking.py
desloppify/engine/detectors/: complexity.py  jscpd_adapter.py  review_coverage.py
desloppify/engine/planning/: render.py  scan.py  select.py  types.py
desloppify/intelligence/: __init__.py
desloppify/intelligence/integrity/: subjective.py
desloppify/intelligence/narrative/: __init__.py  _constants.py  core.py  dimensions.py  headline.py  phase.py  strategy_engine.py
desloppify/intelligence/review/: context.py  prepare.py  prepare_batches.py  remediation.py
desloppify/lang/: __init__.py  base.py  commands_base.py  finding_factories.py
desloppify/lang/python/: __init__.py  commands.py  extractors.py  phases.py  test_coverage.py
desloppify/lang/typescript/: __init__.py  commands.py  extractors.py  phases.py
desloppify/languages/: README.md  __init__.py
desloppify/languages/_framework/: __init__.py  commands_base.py  contract_validation.py  discovery.py  facade_common.py  finding_factories.py  policy.py  registry_state.py  resolution.py  runtime.py  structure_validation.py
desloppify/languages/bash/: __init__.py
desloppify/languages/clojure/: __init__.py
desloppify/languages/csharp/: README.md  __init__.py  commands.py  phases.py  review.py
desloppify/languages/cxx/: __init__.py
desloppify/languages/dart/: __init__.py  commands.py  move.py  phases.py  review.py
desloppify/languages/elixir/: __init__.py
desloppify/languages/erlang/: __init__.py
desloppify/languages/fsharp/: __init__.py
desloppify/languages/gdscript/: __init__.py  commands.py  phases.py  review.py
desloppify/languages/go/: __init__.py  phases.py
desloppify/languages/haskell/: __init__.py
desloppify/languages/java/: __init__.py
desloppify/languages/javascript/: __init__.py
desloppify/languages/kotlin/: __init__.py
desloppify/languages/lua/: __init__.py
desloppify/languages/nim/: __init__.py
desloppify/languages/ocaml/: __init__.py
desloppify/languages/perl/: __init__.py
desloppify/languages/php/: __init__.py
desloppify/languages/powershell/: __init__.py
desloppify/languages/python/: __init__.py  commands.py  phases.py  phases_quality.py  review.py  test_coverage.py
desloppify/languages/r/: __init__.py
desloppify/languages/ruby/: __init__.py
desloppify/languages/rust/: __init__.py
desloppify/languages/scala/: __init__.py
desloppify/languages/swift/: __init__.py
desloppify/languages/typescript/: __init__.py  commands.py  phases.py  review.py
desloppify/languages/zig/: __init__.py
desloppify/narrative/: __init__.py  _constants.py  actions.py  core.py  dimensions.py  headline.py  phase.py  reminders.py  strategy.py
desloppify/output/: __init__.py  _viz_template.html  scorecard.py  visualize.py
desloppify/review/: __init__.py  context.py  context_holistic.py  dimensions.py  import_findings.py  prepare.py  remediation.py  selection.py
desloppify/tests/commands/: test_cli.py  test_cmd_dev.py  test_cmd_fix.py  test_cmd_move.py  test_cmd_next.py  test_cmd_plan.py  test_cmd_resolve.py  test_cmd_scan.py  test_cmd_show.py  test_cmd_status.py  test_cmd_zone.py  test_commands_base.py  test_direct_coverage_modules.py  test_direct_coverage_split_modules.py  test_helpers.py  test_review_batch_core_direct.py  test_review_output.py  test_review_process_guards_direct.py  test_transitive_engine.py
docs/: go-quality-pipeline.md
skills/: CLAUDE.md  CODEX.md
tests/: test_base.py  test_cli.py  test_cmd_detect.py  test_cmd_dev.py  test_cmd_fix.py  test_cmd_fix_review.py  test_cmd_move.py  test_cmd_next.py  test_cmd_plan.py  test_cmd_resolve.py  test_cmd_scan.py  test_cmd_show.py  test_cmd_status.py  test_cmd_zone.py  test_commands_base.py  test_complexity.py  test_dupes.py  test_facade.py  test_flat_dirs.py  test_gods.py  test_graph.py  test_holistic_review.py  test_issues.py  test_lang_base.py  test_lang_init.py  test_lang_standardization.py  test_lang_test_layout.py  test_large.py  test_mutable_state.py  test_naming.py  test_narrative.py  test_passthrough.py  test_plan.py  test_py_commands.py  test_py_complexity.py  test_py_deps.py  test_py_dict_keys.py  test_py_extractors.py  test_py_init.py  test_py_smells.py  (+30 more)
(+231 files in other folders)
