[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desloppify"
version = "0.7.0"
description = "Multi-language codebase health scanner and technical debt tracker"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["Pillow>=9.0.0"]

[project.optional-dependencies]
treesitter = ["tree-sitter-language-pack>=0.3"]

[project.scripts]
desloppify = "desloppify.cli:main"

[tool.setuptools.packages.find]
include = ["desloppify*"]
exclude = ["desloppify.tests", "desloppify.tests.*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"desloppify.languages._framework" = ["review_data/*.json"]
"desloppify.languages.python" = ["review_data/*.json"]
"desloppify.languages.typescript" = ["review_data/*.json"]
"desloppify.languages.csharp" = ["review_data/*.json"]
"desloppify.languages.dart" = ["review_data/*.json"]
"desloppify.languages.gdscript" = ["review_data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ['desloppify/tests', 'desloppify/languages/python/tests', 'desloppify/languages/typescript/tests', 'desloppify/languages/csharp/tests', 'desloppify/languages/dart/tests', 'desloppify/languages/gdscript/tests', 'desloppify/languages/go/tests']
norecursedirs = ["desloppify/tests/fixtures"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"
pretty = true
files = [
  "desloppify/app/commands/review/cmd.py",
  "desloppify/app/commands/review/prepare.py",
  "desloppify/app/commands/review/batches.py",
  "desloppify/app/commands/review/import_cmd.py",
  "desloppify/app/commands/review/runtime.py",
  "desloppify/app/commands/scan/scan_reporting_dimensions.py",
  "desloppify/app/commands/scan/scan_reporting_presentation.py",
  "desloppify/app/commands/scan/scan_reporting_subjective_paths.py",
  "desloppify/app/cli_support/parser.py",
  "desloppify/app/cli_support/parser_groups.py",
]
