[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desloppify"
version = "0.7.4"
description = "Multi-language codebase health scanner and technical debt tracker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Peter O'Malley", email = "pom@banodoco.ai"},
]
keywords = ["code-quality", "technical-debt", "linter", "static-analysis", "refactoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/peteromallet/desloppify"
Repository = "https://github.com/peteromallet/desloppify"
Issues = "https://github.com/peteromallet/desloppify/issues"

[project.optional-dependencies]
treesitter = ["tree-sitter-language-pack>=0.3"]
python-security = ["bandit>=1.7.8"]
scorecard = ["Pillow>=9.0.0"]
full = [
  "tree-sitter-language-pack>=0.3",
  "bandit>=1.7.8",
  "Pillow>=9.0.0",
]

[project.scripts]
desloppify = "desloppify.cli:main"

[tool.setuptools.packages.find]
include = ["desloppify*"]
exclude = ["desloppify.tests", "desloppify.tests.*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"desloppify.languages._framework" = ["review_data/*.json"]
"desloppify.languages.python" = ["review_data/*.json"]
"desloppify.languages.typescript" = ["review_data/*.json"]
"desloppify.languages.csharp" = ["review_data/*.json"]
"desloppify.languages.dart" = ["review_data/*.json"]
"desloppify.languages.gdscript" = ["review_data/*.json"]
"desloppify.languages.go" = ["review_data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ['desloppify/tests', 'desloppify/languages/python/tests', 'desloppify/languages/typescript/tests', 'desloppify/languages/csharp/tests', 'desloppify/languages/dart/tests', 'desloppify/languages/gdscript/tests', 'desloppify/languages/go/tests']
norecursedirs = ["desloppify/tests/fixtures"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"
pretty = true
files = [
  "desloppify/app/commands/review/entrypoint.py",
  "desloppify/app/commands/review/prepare.py",
  "desloppify/app/commands/review/batches.py",
  "desloppify/app/commands/review/batch_core.py",
  "desloppify/app/commands/review/import_cmd.py",
  "desloppify/app/commands/review/runtime.py",
  "desloppify/app/commands/scan/scan_reporting_dimensions.py",
  "desloppify/app/commands/scan/scan_reporting_llm.py",
  "desloppify/app/commands/scan/scan_reporting_presentation.py",
  "desloppify/app/commands/scan/scan_reporting_subjective.py",
  "desloppify/app/commands/scan/scan_workflow.py",
  "desloppify/app/cli_support/parser.py",
  "desloppify/app/cli_support/parser_groups.py",
  "desloppify/engine/concerns.py",
  "desloppify/languages/_framework/generic.py",
]
